# zuul

./: .envrc  .gitignore  .guix-channel  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml  exchange_record  flake.lock.license  flake.nix  guix.scm  i18n.toml  justfile  manifest.scm  rust-toolchain.toml
.github/workflows/: release.yml  test-and-build.yml
.guix/modules/: zuul-package.scm
LICENSES/: MIT.txt
crates/assuan/: Cargo.toml
crates/assuan/src/: decode_string.rs  lib.rs
i18n/en/: Zuul.ftl  zuul.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  error.rs  form.rs  i18n.rs  main.rs  subscription.rs
src/assuan/: mod.rs
tests/resources/: exchange_record
